<resources>
    <string name="app_name">RED</string>
    <string name="login_uname">User Name</string>
    <string name="login_pwd">Password</string>
    <string name="login_accedi">Accedi</string>
    <string name="switch_title">Unotherized User</string>
    <string name="switch_centertitle">Gestione Pdv</string>
    <string name="switch_thirdtitle">Gestione Ordini</string>
    <string name="search_hint">Cerca attivita</string>
    <string name="pointofsale_search_hint">Cerca punto vendita</string>
    <string name="da_inviare">Da inviare</string>
    <string name="inviati">Inviati</string>
    <string name="invia_dati">INVIA DATI</string>
    <string name="bozze">Bozze</string>
    <string name="annulla">Annulla</string>
    <string name="prosegui">Prosegui</string>
    <string name="Elimina_bozza">Elimina bozza</string>
    <string name="Salva_bozza">Salva bozza</string>
    <string name="chiudi">Chiudi</string>
    <string name="pof_title">Punto Vendita</string>
    <string name="aproductdetail_title">Dettaglio promozione</string>
    <string name="aproductdetail_dettprodotto">Dett. prodotto</string>
    <string name="chiusura_attivita">Chiusura Attivita</string>
    <string name="prodotti">Prodotti</string>
    <string name="Button">Esci dall\' attivita</string>
    <string name="survey_sucess_msg">I dati raccolti sono stati inviati con successo</string>
    <string name="survey_sucess_btn">Torna alla schermata iniziale</string>
    <string name="esci_dall_attivita">Esci dall\' attività</string>
    <string name="Logout">ESCI</string>
    <string name="assortimento">Assortimento</string>
    <string name="listino_completo">Listino completo</string>
    <string name="prodotti_rilevati">Prodotti rilevati</string>
    <string name="search_label">Cerca Prodotto</string>
    <string name="of">di</string>
    <string name="products_inassorti">prodotti in assortimento</string>
    <string name="promozioni">Promozioni </string>
    <string name="non_piu_attive">Non piu attive</string>
    <string name="attive">Attive</string>
    <string name="prossime">Prossime</string>
    <string name="concorrenza">Concorrenza</string>
    <string name="closure_home_button">INVIA DATI</string>
    <string name="complete_title">Dettaglio prodotto</string>
    <string name="complete_text1">Nome promozione</string>
    <string name="complete_btext"> Statistiche di vendita</string>
    <string name="promotion_promo_title"> Promozione della Pasqua Gioiosa</string>
    <string name="promotion_promo_startdate"> Sell-out dal</string>
    <string name="promotion_promo_al"> al</string>
    <string name="promotion_child_visibility"> Visibilità della promozione</string>
    <string name="promotion_details_title">Dettaglio promozione</string>
    <string name="promotion_details_compaign">Campagna</string>
    <string name="promotion_details_code">CODICE</string>
    <string name="promotion_details_listofpref">Elenco articoli referenze della promozione</string>
    <string name="promotion_details_description">DESCRIZIONE</string>
    <string name="promotion_details_countryname">Nome della Campagna</string>
    <string name="promotion_details_promotion">Promozione</string>
    <string name="promotion_details_promodescription"> Descrizione della promozione</string>
    <string name="promotion_details_sellin">SELL-IN</string>
    <string name="promotion_details_sellout">SELL-OUT</string>
    <string name="promotion_details_orderperiod">PERIODO ORDINE</string>
    <string name="promotion_details_discountrate">SCONTI VALUTA</string>
    <string name="promotion_details_discountgoods">SCONTO MERCE</string>
    <string name="p_details_client">Dati cliente</string>
    <string name="p_details_code"> CODICE CLIENTE</string>
    <string name="p_details_company">RAGIONE SOCIALE</string>
    <string name="p_details_address">INDIRIZZO</string>
    <string name="p_details_contacts">CONTATTI</string>
    <string name="p_details_ref">RIFERIMENTO</string>
    <string name="p_details_vat">PARTITA IVA</string>
    <string name="p_details_citta">CITTA</string>
    <string name="p_details_cap">CAP</string>
    <string name="p_details_pv">PV</string>
    <string name="p_details_partita_iva">PARTITA IVA</string>
    <string name="p_details_telefono">TELEFONO</string>
    <string name="p_details_fax">FAX</string>
    <string name="p_details_email">E-MAIL</string>
    <string name="p_details_billing">Dati fatturazione</string>
    <string name="statistics_last_year_sales">Vendite anno precedente</string>
    <string name="statistics_current_year_sales">Vendite anno corrente</string>
    <string name="statistics_last_order">Ultimo ordine</string>
    <string name="statistics_last_delivery">Ultima consegna</string>
    <string name="statistics_prezzo_di_listino">Prezzo di listino singola unità di vendita</string>
    <string name="statistics_title">Statistiche</string>
    <string name="p_details_fatturazione">Dati fatturazione</string>
    <string name="login_failed">Accesso fallito</string>
    <string name="login_success">Accesso effettuato</string>
    <string name="login_no_permission">Nessun permesso</string>
    <string name="error_server">Errore del server</string>
    <string name="error_json">Errore di analisi</string>
    <string name="error_no_data">Nessun dato disponibile</string>
    <string name="error_sending">Invio della rilevazione fallita, riprova</string>
    <string name="sync_failed">Sincronizzazione non riuscita, riprovare</string>
    <string name="sync_to_server_failed">Invio fallito</string>
    <string name="sync_success">Successo di sincronizzazione</string>
    <string name="copia_valori_da_precendenta_attiva">Copia valori da precendente attività</string>
    <string name="error_copying">Impossibile controllare la data dell\'ultima rilevazione, premere il pulsante per riprovare</string>
    <string name="attivita_vuota">Attivita vuota</string>
    <string name="riprendi_la_bozza_esistente">Riprendi la bozza esistente</string>
    <string name="volantino">Volantino:</string>
    <string name="taglio_pz">Taglio Pz.:</string>
    <string name="attivit_di">Attivita di Gestione Pdv del</string>
    <string name="prezzo">Prezzo:</string>
    <string name="presso">presso:</string>
    <string name="facing">Facing:</string>
    <string name="fb">FB</string>
    <string name="posln">Pos Lin.</string>
    <string name="msg_save_survey">Stai uscendo dall\'attività di Gestione Pdv senza averla conclusa. Puoi salvare proseguire in un secondo momento</string>
    <string name="msg_continue">Continuare l’attività del punto vendita</string>
    <string name="msg_survey_sent_sucess_online">I dati raccolti sono stati inviati con successo</string>
    <string name="msg_survey_sent_sucess_offline">Connessione alla rete non disponibile. I dati sonon stati salvati nell lista "da inviare"</string>
    <string name="msg_invia_dati_survey_failed">Impossibile inviare la rilevazione dalla sezione “Da inviare”. Server occupato. Riprova più tardi</string>
    <string name="msg_survey_saved_da_inviare">La rilevazione è stata spostata nella sezione “Da inviare”</string>
    <string name="msg_current_survey_failed">Invio della rilevazione fallita…server occupato…come vuoi procedere?</string>
    <string name="send_later">Invia più tardi.</string>
    <string name="emtpy_invira">Nessuna attività da inviare</string>
    <string name="empty_bozza">Nessuna attività in bozza</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="SCHERMATA_PRINICIPALE">SCHERMATA PRINICIPALE</string>
    <string name="ESCI">ESCI</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="msg_net_not_available">Nessuna connessione disponibile</string>
    <string name="msg_intenet_not_connected">Internet no disponibile</string>
    <string name="msg_inviati_selected">rilevazioni inviate</string>
    <string name="msg_da_inivare_selected">rilevazioni da inviare</string>
    <string name="msg_bozze_selected">rilevazioni in bozza</string>
    <string name="msg_assortimento_selected">prodotti in assortimento</string>
    <string name="msg_listino_completo_selected">prodotti in listino completo</string>
    <string name="msg_prodotti_rilevati_selected">prodotti rilevati</string>
    <string name="msg_sync_needed">Effettua la prima sincronizzazione per poter cominciare ad usare l’applicativo</string>
    <string name="msg_attive_selected">promozioni attive</string>
    <string name="msg_non_piu_attive_selected">promozioni non più attive</string>
    <string name="msg_prossime_selected">promozioni</string>
    <string name="msg_point_of_sale">punti vendita</string>
    <string name="msg_concorrenza_selected">prodotti conconrrenza</string>
    <string name="msg_empty_survey">Non si sono dati rilevati</string>
    <string name="msg_fill_all_fields">Verifica di aver compilato tutti i campi</string>
    <string name="msg_fill_all_or_empty_all">Per procedere devi compilare tutti i campi o lasciarli vuoti</string>
    <string name="msg_no_update_available">Nessun aggiornamento</string>
    <string name="lbl_btn_draft_retrival">Riprendi la bozza esistente</string>
    <string name="hint_prodotti_search">Cerca prodotto</string>
    <string name="hint_prodotti_promotions">Cerca promozione</string>
    <string name="hint_prodotti_concorenza">Cerca</string>
    <string name="hint_to_be_sent">Cerca attività</string>
    <string name="msg_no_customer_details">Nessun dettaglio per il cliente</string>
    <string name="msg_loading">Caricamento</string>
    <string name="msg_copying">Copiando</string>
    <string name="lbl_dett__prodotto">Dett. prodotto</string>
    <string name="msg_no_net_connection">I dettagli del prodotto sono disponibili solo con connessione internet attiva</string>
    <string name="msg_copy_starting">Confermi la copia dei valori dalla riga</string>
    <string name="msg_copy_middle">su tutti gli altri</string>
    <string name="msg_copy_ending">in selezione\?</string>
    <string name="msg_empty_copy">Cannot copy empty data</string>
    <string name="nonetworktitle">connessione di rete non disponibile</string>
    <string name="msg_empty_promotions">Nessuna promozione</string>
    <string name="msg_empty_prodotti">Nessun prodotto trovato</string>
    <string name="msg_empty_prodotti_rivealti">Nessun prodotto</string>
    <string name="msg_empty_concorrenza">Nessun elemento in lista</string>
    <string name="msg_empty_da_inviare">Nessuna attività da inviare</string>
    <string name="msg_empty_bozze">Nessuna attività in bozza</string>
    <string name="msg_empty_inviati">Nessuna attività inviata</string>
    <string name="msg_empty_customer">Nessun punto vendita</string>
    <string name="msg_update_available">Sono disponibili aggiornamenti</string>
    <string name="msg_app_update_available">È disponibile un aggiornamento per l\'applicazione</string>
    <string name="cluster_punto_vendita">Cluster punto vendita</string>
    <string-array name="clusters">
        <item >A</item>
        <item >B</item>
        <item >C</item>
        <item >D</item>
        <item >E</item>
        <item >F</item>
        <item >G</item>
    </string-array>
    <string name="retry">Riprova</string>
    <string name="connecting_server">Connessione al server</string>
    <string name="waiting_response">In attesa di risposta</string>
    <string name="server_not_responding">Il server non risponde</string>
    <string name="cancel">Annulla</string>
    <string name="appnotfoundtitle">L applicazione non trovata</string>
    <string name="syncing">Sincronizzazione</string>
    <string name="senting">Invio</string>
    <string name="logging_in">Effettuando il login, attendere</string>
    <string name="please_wait">Attendere prego</string>
    <string name="senting_successful">Invio di successo</string>
</resources>