<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_background">
    <LinearLayout 
        android:id="@+id/layout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E8ECEE"
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_gravity="center">
        
        <TextView
	        android:id="@+id/field_pdv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/riprendi_la_bozza_esistente"
	        android:padding="8dp"
	        android:textColor="#626F78"
	        android:textStyle="bold"
	        android:gravity="center"/>
        
	    <Button 
	        android:id="@+id/btn_riprendi_la_bozza_esistente"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/btn_blue_popup"
	        android:text="@string/riprendi_la_bozza_esistente"
	        android:padding="8dp"
	        android:textColor="#626F78"/>
        
	    <FrameLayout 
	        android:id="@+id/layout_copy"
	        android:layout_width="339dp"
	        android:layout_height="53dp"
	        android:layout_marginTop="10dp">
		    <Button 
		        android:id="@+id/btn_copia_valori"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:background="@drawable/btn_blue_popup"
		        android:text="@string/copia_valori_da_precendenta_attiva"
		        android:padding="8dp"
		        android:textColor="#626F78"
		        android:visibility="visible"/>
		    <Button 
		        android:id="@+id/btn_error_copying"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:background="@drawable/btn_blue_popup"
		        android:text="@string/error_copying"
		        android:padding="8dp"
		        android:textColor="#626F78"
		        android:visibility="gone"/>
		    <TextView 
		        android:id="@+id/lbl_msg_no_net"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#626F78"
		        android:textStyle="bold"
		        android:text="@string/msg_net_not_available"
		        android:layout_gravity="center"
		        android:visibility="invisible"/>
		   
		    
	    </FrameLayout>
	
	    <Button 
	        android:id="@+id/btn_attivita_vuota"
	        android:layout_width="339dp"
	        android:layout_height="53dp"
	        android:background="@drawable/btn_blue_popup"
	        android:text="@string/attivita_vuota"
	        android:padding="8dp"
	        android:layout_marginTop="10dp"
	        android:textColor="#626F78"/>
	    
	    <Button 
	        android:id="@+id/btn_annulla"
	        android:layout_width="339dp"
	        android:layout_height="53dp"
	        android:background="@drawable/btn_blue_popup"
	        android:text="@string/annulla"
	        android:padding="8dp"
	        android:layout_marginTop="10dp"
	        android:textColor="#626F78"/>
    </LinearLayout>
</FrameLayout>