<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/activity_background">
<RelativeLayout 
    android:layout_width="447dip"
    android:layout_height="366dip"
	android:background="@drawable/bk_alert"
	android:layout_centerInParent="true"
	android:layout_gravity="center">

    <TextView 
         android:text="@string/msg_save_survey"
         android:id="@+id/lbl_msg"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#333333" 
         android:textSize="18sp"
         android:layout_centerHorizontal="true"/>
     
     
     <Button 
         android:id="@+id/btn_cancel"
         android:layout_width="202dp" 
         android:layout_marginTop="50dp"
          android:layout_below="@id/lbl_msg"
          android:layout_height="46dp"
          android:layout_centerHorizontal="true"
          android:background="@drawable/btn_blue_popup"
          android:text="@string/annulla"
          android:textColor="#35464D"
          android:textAppearance="@android:style/TextAppearance.Medium" />
     
     <Button 
         android:id="@+id/btn_elimina_bozza"
         android:layout_below="@id/btn_cancel"
         android:layout_width="202dp" 
         android:layout_marginTop="15dp"
         android:layout_height="46dp"
         android:layout_centerHorizontal="true"
         android:text="@string/Elimina_bozza" 
         android:background="@drawable/btn_red_popup"
         android:textColor="@android:color/white"
         android:textAppearance="@android:style/TextAppearance.Medium" />
     
     <Button 
         android:id="@+id/btn_save_drafts"
         android:layout_marginTop="15dp"
         android:layout_below="@id/btn_elimina_bozza"
         android:layout_width="202dp" 
         android:background="@drawable/btn_blue_popup"
         android:layout_height="46dp"
         android:layout_centerHorizontal="true"
         android:text="@string/Salva_bozza"
         android:textColor="#35464D"
         android:textAppearance="@android:style/TextAppearance.Medium" />
     
    </RelativeLayout>
</FrameLayout>