<RelativeLayout android:id="@+id/layout_titlebar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/layout_title_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">
        <TextView
            android:id="@+id/field_title"
            android:textColor="#ffffff"
            android:text="@string/promozioni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold"  />
        <TextView
            android:id="@+id/field_cust_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_inviare"
            android:textColor="#ffffff"/>
        <TextView
            android:id="@+id/field_cust_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_inviare"
            android:textColor="#ffffff"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_esci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_anulla"
        android:text="@string/esci_dall_attivita"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:layout_centerVertical="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/btn_esci"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
       />


    <LinearLayout
        android:id="@+id/layout_cluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        android:visibility="visible">
        <Button
            android:id="@+id/lbl_cluster"

            android:background="@drawable/btn_anulla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cluster_punto_vendita"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="#ffffff"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>


    </LinearLayout>


</RelativeLayout>