<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

	<com.eteam.utils.TopCropImageView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:src="@drawable/login_bg"
		android:scaleType="fitXY"
		android:adjustViewBounds="true"
		/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">


	<Button 
	    android:id="@+id/btn_import"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="Import"
	    android:visibility="gone"/>
	<RelativeLayout
	    android:layout_width="400dip"
	    android:layout_height="310dip"
	    android:background="@drawable/bk_login"
	    android:layout_centerInParent="true">
	    <TextView
	        android:id="@+id/tv_un"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="8pt"
	        android:textColor="#000000"
	        android:layout_alignParentLeft="true"
	        android:layout_marginRight="20dip"
	        android:layout_marginTop="45dip"
	        android:layout_marginLeft="20dip"
	        android:text="@string/login_uname"/>
	    <EditText
	        android:hint="@string/login_uname"
	        android:id="@+id/et_un"
	        android:textSize="5pt"
	        android:textColor="#000000"
	        android:layout_width="fill_parent"
	        android:layout_height="45dip"
	        android:layout_marginRight="20dip"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:background="@drawable/bk_login"
	        android:layout_below="@id/tv_un"
	        android:paddingLeft="15dp"
	        android:singleLine="true"/>
	     <TextView
	        android:id="@+id/tv_pw"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="8pt"
	        android:textColor="#000000"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/et_un"
	        android:layout_marginRight="20dip"
	        android:layout_marginTop="25dip"
	        android:layout_marginLeft="20dip"
	        android:text="@string/login_pwd"/>
	    <EditText
	        android:hint="@string/login_pwd"
	        android:id="@+id/et_pw"
	        android:textSize="5pt"
	        android:textColor="#000000"
	        android:layout_width="fill_parent"
	        android:layout_height="45dip"
	        android:background="@drawable/bk_login"
	        android:layout_below="@id/tv_pw"
	        android:layout_marginRight="20dip"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:password="true" 
	        android:paddingLeft="15dp"
	        android:singleLine="true" />
	    <Button
	        android:id="@+id/btn_login"
	        android:layout_width="80dip"
	        android:layout_height="40dip"
	        android:layout_below="@id/et_pw"
	        android:textSize="6pt"
	        android:layout_marginTop="12dip"
	        android:layout_marginRight="40dip"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/btn_login"
	        android:text="@string/login_accedi" />
	    
	</RelativeLayout>
    <TextView
       android:id="@+id/lbl_version"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="8pt"
       android:layout_margin="10dp"
       android:textColor="#fff"
       android:layout_marginRight="20dip"
       android:layout_marginTop="45dip"
       android:layout_marginLeft="20dip"
       android:layout_alignParentBottom="true"
       android:layout_alignParentRight="true"/>
    
</RelativeLayout>
</FrameLayout>